2020년 3월 25일 프로세스 vs 스레드 추가 문제

--- a/프로세스와 스레드.md
+++ b/프로세스와 스레드.md
@@ -232,3 +232,35 @@ PC 값은 스레드가 명령어의 어디까지 수행하였는지를 나타나
 
 </div>
 </details>
+
+
+<details>
+<summary>🚧 프로세스의 힙에는 어떤 내용이 저장되는가 ?</summary>
+<div markdown="1">
+</div>
+</details>
+
+
+<details>
+<summary>🚧 프로세스 실행중에 힙이 어떻게, 언제 할당 되는가?  </summary>
+<div markdown="1">
+</div>
+</details>
+
+
+
+<details>
+<summary>🚧 PPID, CPID가 필요한 이유</summary>
+<div markdown="1">
+</div>
+</details>
+
+
+<details>
+<summary>🚧 스레드를 사용하는 이유</summary>
+<div markdown="1">
+  - 멀티태스킹의 낭비 요소를 제거하기 위해 사용한다. 
+</div>
+</details>
+
+
