[2020년 3월 25일] 프로세스 vs 스레드 슽처디 내용 추가

--- a/프로세스와 스레드.md
+++ b/프로세스와 스레드.md
@@ -22,21 +22,21 @@
 </details>
 
 <details>
-<summary>프로세스란 주소 공간 구성</summary>
+<summary>프로세스 주소 공간 구성</summary>
 <div markdown="1">
 
 Code : 코드 자체를 구성하는 메모리 영역(프로그램 명령)
 
 Data : 전역변수, 정적변수, 배열 등
 
-초기화 된 데이터는 data 영역에 저장
-초기화 되지 않은 데이터는 bss 영역에 저장
+초기화 된 데이터는 data 영역에 저장  
+초기화 되지 않은 데이터는 bss 영역에 저장  
 Heap : 동적 할당 시 사용 (new(), malloc() 등)
-
-Stack : 지역변수, 매개변수, 리턴 값 (임시 메모리 영역)>
+Stack : 지역변수, 매개변수, 리턴 값 (임시 메모리 영역)
 
 </div>
 </details>
+
 <details>
 <summary>🚧 주소 공간을 이렇게 나누는 이유?</summary>
 <div markdown="1"> 
@@ -188,8 +188,14 @@ PC 값은 스레드가 명령어의 어디까지 수행하였는지를 나타나
 </div>
 </details>
 
+<details>
+<summary>🚧 부트스트랩이란</summary>
+<div markdown="1">
 
-🚧 부트스트랩이란
+https://www.techopedia.com/definition/3328/bootstrap#:~:text=A%20bootstrap%20is%20the%20program,program%20such%20as%20the%20OS
+
+</div>
+</details>
 
 <details>
 <summary>일괄 작업 시스템의 프로세스 상태</summary>
@@ -232,8 +238,7 @@ PC 값은 스레드가 명령어의 어디까지 수행하였는지를 나타나
 
 </div>
 </details>
-
-
+햐
 <details>
 <summary>🚧 프로세스의 힙에는 어떤 내용이 저장되는가 ?</summary>
 <div markdown="1">
@@ -263,4 +268,48 @@ PC 값은 스레드가 명령어의 어디까지 수행하였는지를 나타나
 </div>
 </details>
 
+## 스터디 진행 내용
+1. TCB, TLS
+   - https://en.wikipedia.org/wiki/Thread_control_block
+   - http://egloos.zum.com/sweeper/v/1985738
+2. 유저 레벨 스레드 <-> 커널 레벨 스레드 
+   - 운영체제가 관리하는 스레드도 알아두면 좋다!
+   - https://www.crocus.co.kr/1255
+3. 프로세스의 실행 로직 (레지스터 셋 change 등등)
+4. fork() <-> exec() 차이점
+5. 유저 메모리 영역, 커널 메모리 영역 나누는 이유  
+https://blog.naver.com/PostView.nhn?isHttpsRedirect=true&blogId=sheep_horse&logNo=221271778167
+
+
+<details>
+<summary>스택 영역의 주소 공간만 높은 주소 -> 낮은 주소로 자라나는 이유</summary>
+<div markdown="1">
+
+스택영역은 다른 영역들과 달리 높은 주소에서 낮은 주소로 자라나는 형태를 가진다.
+
+이러한 이유는 스택영역이 운영체제의 핵심인 커널영역을 침범할 수 없기 때문인데 이렇게 된다면 스택영역이 엄청나게 커지더라도 커널영역을 침범하지 않게 된다.
+
+다른 이유는 스택영역과(높은 주소에서 낮은 주소로) 힙영역(낮은 주소에서 높은 주소로)이 공간을 공유하면서 사용하게 되면 공간을 효율적으로 사용할 수 있기 때문이다.(위 그림을 보면 쉽게 이해할 수 있을 것이다.)
+
+스택영역은 후입선출, LIFO(Last In First Out)구조를 가지는데 말 그대로 가장 마지막에 들어간 것이 가장 먼저 나오는 것을 의미한다.
+
+예시를 들면 신문을 쌓아놓고 판매하는 곳이 있다면 구입해 가는 사람들은 맨 위에 있는 신문부터 가져가는 것과 같다.
+
+스택영역은 PUSH와 POP 명령을 통해 작동하는데 PUSH란 스택영역에 데이터를 집어넣을 때 사용되며, POP은 스택영역에서 데이터를 꺼낼 때 사용된다.
+출처: https://hdacker.tistory.com/6
+</div>
+</details>
+
+<details>
+<summary> 커널 메모리 영역, 유저 메모리 영역 구분짓는 기준이 무엇인가? 언제 결정되는가? </summary>
+<div markdown="1">
+
+http://egloos.zum.com/rousalome/v/9997899
+
+</div>
+</details>
+
+6. 커널 모드와 유저 모드의 차이
+7. 언제 대기 상태(block 상태)로 전환되는가? 언제 대기 상태(block 상태)에서 돌아오는가?
+8. 대기 상태로 전환되는 과정, 대기 상태에서 회복되는 과정
 
