[2021년 3월 25일] 프로세스 vs 스레드 스터디 내용 보충

--- a/프로세스와 스레드.md
+++ b/프로세스와 스레드.md
@@ -11,6 +11,8 @@
 </div>
 </details>
 
+<br/>
+
 <details>
 <summary>스레드란?</summary>
 <div markdown="1">
@@ -20,6 +22,8 @@
 
 </div>
 </details>
+
+<br/>
 
 <details>
 <summary>프로세스 주소 공간 구성</summary>
@@ -37,8 +41,10 @@ Stack : 지역변수, 매개변수, 리턴 값 (임시 메모리 영역)
 </div>
 </details>
 
+<br/>
+
 <details>
-<summary>🚧 주소 공간을 이렇게 나누는 이유?</summary>
+<summary>주소 공간을 이렇게 나누는 이유?</summary>
 <div markdown="1"> 
 
 공통된 부분은 최대한 공유하여 컴퓨터 시스템 리소스(메모리) 절약하기 위해
@@ -46,6 +52,8 @@ Stack : 지역변수, 매개변수, 리턴 값 (임시 메모리 영역)
 
 </div>
 </details>
+
+<br/>
 
 <details>
 <summary>스레드란?</summary>
@@ -56,6 +64,8 @@ Stack : 지역변수, 매개변수, 리턴 값 (임시 메모리 영역)
 
 </div>
 </details>
+
+<br/>
 
 <details>
 <summary>프로세스란 🆚 스레드</summary>
@@ -75,16 +85,19 @@ Stack : 지역변수, 매개변수, 리턴 값 (임시 메모리 영역)
 </div>
 </details>
 
+<br/>
+
 <details>
-<summary>🚧 스레드를 사용하는 이유</summary>
+<summary>스레드를 사용하는 이유</summary>
 <div markdown="1"> 
 
-공통된 부분은 최대한 공유하여 컴퓨터 시스템 리소스(메모리) 절약하기 위해
-동일한 프로그램이라면 코드와 데이터는 메모리에 한번만 할당되어 존재해도 충분하다, 이것을 공유하여 사용함으로써 시스템 리소스를 절약하기 위함이다.
+= 멀티 스레드 사용 이유와 동일하다.  
+간단 요약: 멀티태스킹의 낭비 요소를 제거하기 위해 사용한다. 
 
 </div>
 </details>
 
+<br/>
 
 <details>
 <summary>스택을 스레드마다 독립적으로 할당하는 이유</summary>
@@ -95,6 +108,8 @@ Stack : 지역변수, 매개변수, 리턴 값 (임시 메모리 영역)
 </div>
 </details>
 
+<br/>
+
 <details>
 <summary>PC Register 를 스레드마다 독립적으로 할당하는 이유</summary>
 <div markdown="1">
@@ -103,6 +118,8 @@ PC 값은 스레드가 명령어의 어디까지 수행하였는지를 나타나
 
 </div>
 </details>
+
+<br/>
 
 <details>
 <summary>프로세스 제어 블록 (PCB)</summary>
@@ -115,6 +132,8 @@ PC 값은 스레드가 명령어의 어디까지 수행하였는지를 나타나
 
 </div>
 </details>
+
+<br/>
 
 <details>
 <summary>프로세스 제어블록(PCB)의 구성</summary>
@@ -134,6 +153,8 @@ PC 값은 스레드가 명령어의 어디까지 수행하였는지를 나타나
 </div>
 </details>
 
+<br/>
+
 <details>
 <summary>프로그램 🆚 프로세스 </summary>
 <div markdown="1">
@@ -144,8 +165,7 @@ PC 값은 스레드가 명령어의 어디까지 수행하였는지를 나타나
 </div>
 </details>
 
-- 프로세스 = 프로그램 + 프로세스 제어블록❓
-  - PCB는 운영체제 영역에 존재하는 것인데 프로세스의 구성요소라고 볼 수 있는지 궁금해요‼️
+<br/>
 
 <details>
 <summary>"프로세스가 실행된다"의 의미</summary>
@@ -156,6 +176,8 @@ PC 값은 스레드가 명령어의 어디까지 수행하였는지를 나타나
 
 </div>
 </details>
+
+<br/>
 
 <details>
 <summary>"운영체제도 프로세스이다 !</summary>
@@ -173,6 +195,7 @@ PC 값은 스레드가 명령어의 어디까지 수행하였는지를 나타나
 </div>
 </details>
 
+<br/>
 
 <details>
 <summary>🚧 유저 프로세스와 커널 프로세스의 차이</summary>
@@ -181,21 +204,32 @@ PC 값은 스레드가 명령어의 어디까지 수행하였는지를 나타나
 - 일반 사용자 (일반 프로그램) → 유저 프로세스 실행
   - **운영체제**가 일반 프로그램을 메모리에 올림
   - 일반 사용자의 유저 프로세스 (user process)
+  - 유저 메모리 영역만 접근 가능
+  - 시스템에 제한된 접근만 가능
 - 운영체제 (운영체제 프로그램)
   - **부트스트랩**이 운영체제 프로그램을 메모리에 올림 → 커널 프로세스 실행
   - 운영체제의 커널 프로세스 (kernel process)
+  - 모든 메모리 영역 (유저 메모리 영역 + 커널 메모리 영역)
+  - 모든 명령어 실행 가능
 
 </div>
 </details>
 
+<br/>
+
 <details>
-<summary>🚧 부트스트랩이란</summary>
+<summary> 부트스트랩이란</summary>
 <div markdown="1">
 
+운영체제를 실행할 때 필요한 초기화 작업을 수행하고, 최종적으로 운영체제를 메모리에 로딩하여 실행시키는 프로그램
+
+- 출처
 https://www.techopedia.com/definition/3328/bootstrap#:~:text=A%20bootstrap%20is%20the%20program,program%20such%20as%20the%20OS
 
 </div>
 </details>
+
+<br/>
 
 <details>
 <summary>일괄 작업 시스템의 프로세스 상태</summary>
@@ -205,6 +239,8 @@ https://www.techopedia.com/definition/3328/bootstrap#:~:text=A%20bootstrap%20is%
 
 </div>
 </details>
+
+<br/>
 
 <details>
 <summary>시분할 시스템의 프로세스 상태, 4가지</summary>
@@ -225,8 +261,10 @@ https://www.techopedia.com/definition/3328/bootstrap#:~:text=A%20bootstrap%20is%
 </div>
 </details>
 
+<br/>
+
 <details>
-<summary>🚧 현대 운영체제에서 프로세스의 5가지 상태 (활성 상태)</summary>
+<summary> 현대 운영체제에서 프로세스의 5가지 상태 (활성 상태)</summary>
 <div markdown="1">
 
 - 현대의 복잡성을 대비하기 위해 **프로세스의 4가지 상태**에서 발전함
@@ -238,21 +276,26 @@ https://www.techopedia.com/definition/3328/bootstrap#:~:text=A%20bootstrap%20is%
 
 </div>
 </details>
-햐
+
+<br/>
+
 <details>
-<summary>🚧 프로세스의 힙에는 어떤 내용이 저장되는가 ?</summary>
+<summary>🚧프로세스의 힙에는 어떤 내용이 저장되는가 ?</summary>
 <div markdown="1">
 </div>
 </details>
 
+<br/>
 
 <details>
 <summary>🚧 프로세스 실행중에 힙이 어떻게, 언제 할당 되는가?  </summary>
 <div markdown="1">
+
+
 </div>
 </details>
 
-
+<br/>
 
 <details>
 <summary>🚧 PPID, CPID가 필요한 이유</summary>
@@ -260,13 +303,7 @@ https://www.techopedia.com/definition/3328/bootstrap#:~:text=A%20bootstrap%20is%
 </div>
 </details>
 
-
-<details>
-<summary>🚧 스레드를 사용하는 이유</summary>
-<div markdown="1">
-  - 멀티태스킹의 낭비 요소를 제거하기 위해 사용한다. 
-</div>
-</details>
+<br/>
 
 ## 스터디 진행 내용
 1. TCB, TLS
