[2021년 03월 28일] 멀티 프로세스와 멀티 스레드 심화 질문 추가

--- a/프로세스와 스레드.md
+++ b/프로세스와 스레드.md
@@ -350,3 +350,10 @@ http://egloos.zum.com/rousalome/v/9997899
 7. 언제 대기 상태(block 상태)로 전환되는가? 언제 대기 상태(block 상태)에서 돌아오는가?
 8. 대기 상태로 전환되는 과정, 대기 상태에서 회복되는 과정
 
+9. PCB는 어떻게 관리되나요?
+Linked List 방식으로 관리함
+
+PCB List Head에 PCB들이 생성될 때마다 붙게 된다. 주소값으로 연결이 이루어져 있는 연결리스트이기 때문에 삽입 삭제가 용이함.
+
+즉, 프로세스가 생성되면 해당 PCB가 생성되고 프로세스 완료시 제거됨
+
