--- a/멀티 프로세스와 멀티스레드.md
+++ b/멀티 프로세스와 멀티스레드.md
@@ -1,176 +1,165 @@
-# 1️⃣ 프로세스와 스레드
+# 2️⃣ 멀티 프로세스와 멀티스레드
 
 <details>
 <summary>스레드의 문맥교환이 프로세스의 문맥교환보다 빠른 이유는 무엇인가요 ?</summary>
 <div markdown="1">
+
 스레드의 문맥교환은 캐시를 비우지 않기 때문에 빠르다.
-</div>
-</details>
 
-<details>
-<summary>문맥교환시 오버헤드가 발생하는 이유 ?</summary>
-<div markdown="1">
-프로세스는 독립된 주소 공간을 사용하므로, 문맥교환시 캐시 메모리 초기화와 같은 무거운 작업이 진행되어 오버헤드 발생한다.
-</div>
-</details>
-
-<details>
-<summary>문맥교환이란 ?</summary>
-<div markdown="1">
-1. CPU를 한 프로세스에서 다른 프로세스로 넘겨주는 과정
-2. CPU가 다음 프로세스로 넘어갈 때, 
-    1. 운영체제는 CPU를 내어주는 프로세스의 상태를 해당 프로세스의 PCB에 저장하고,
-    2. CPU를 얻는 프로세스의 상태를 PCB에서 읽어서 복원
-3. 언제 발생?
-    1. timer interrupt 발생
-        
-        timer interrupt는 현재 실행중인 프로세스의 CPU 할당시간이 끝났을 때 발생한다.
-        이때 운영체제가 CPU를 다른 프로세스에게 넘긴다.
-        
-    2. IO요청 System Call이 발생
-        
-        System Call을 요청안 프로세스가 CPU를 받아도 처리할 작업이 없는 경우,
-        다른 프로세스로 CPU가 넘어가게 된다.
 </div>
 </details>
 
 <details>
 <summary>멀티 스레딩의 장점은 무엇이고, 이유는 무엇인가요 ?</summary>
 <div markdown="1">
+
   - 응답성 향상
       - 한 스레드가 입출력 작업 중이라도, 다른 스레드가 사용자의 요청에 응답할 수 있다.
+
   - 자원 공유로 인한 자원 소모량 감소
       - 한 프로세스의 자원을 모든 스레드가 공유하게 되어,
       - 스레드간의 통신은 프로세스의 것보다 간단하다.
-      - 전역변수 or heap
-      - 메모리 공간과 시스템 자원 소모 절약
-</div>
+	@@ -21,14 +25,14 @@
 </details>
 
 <details>
-<summary>스레드간의 통신은 어떻게 이뤄지나요</summary>
+<summary>🚧스레드간의 통신은 어떻게 이뤄지나요</summary>
 <div markdown="1">
 
 </div>
 </details>
 
 <details>
-<summary>프로세스간의 통신은 어떻게 이뤄지나요</summary>
-<div markdown="1">
-
-</div>
+<summary>🚧프로세스간의 통신은 어떻게 이뤄지나요</summary>
+<div markdown="1"></div>
 </details>
-
+    
 <details>
 <summary>멀티 스레딩의 단점을 설명해보세요</summary>
 <div markdown="1">
+
 - 스레드간 공유하는 프로세스 자원이 있기 때문에, 자원을 절약할수있지만, 같은 자원을 여러 스레드가 동시에 접근할 수 있기 때문에 발생하는 문제가 있다. 다른 스레드가 사용중인 변수를 읽거나 수정하게 되면 작업에 영향을 줄 수 있다.
 - 하나의 스레드에 문제가 발생하면, 전체 스레드에 영향을 줄 수 있다. (자원을 공유하고 있기 때문에)
-</div>
+  </div>
 </details>
 
 <details>
 <summary>멀티 스레딩의 단점을 보완하기 위한 방법을 설명해보세요</summary>
 <div markdown="1">
+
 - 동기화 작업을 한다. 동기화 작업으로 처리 순서를 제공하면서 공유 자원에 대한 접근을 제어한다.
     - 해당 방법의 단점은 없나요 ?
         - 과도한 접근제어는 병목현상을 일으킬 수 있다.
-</div>
+
+  </div>
 </details>
 
 <details>
-<summary>멀티 프로세스와 멀티 스레드의 장단점을 설명해보세요 </summary>
+<summary>🚧멀티 프로세스와 멀티 스레드의 장단점을 설명해보세요 </summary>
 <div markdown="1">
 
 </div>
 </details>
 
 <details>
-<summary>어떤 시스템에 멀티 프로세스 방식이 적합할까요 ?</summary>
+<summary>🚧어떤 시스템에 멀티 프로세스 방식이 적합할까요 ?</summary>
 <div markdown="1">
 
 </div>
 </details>
 
 <details>
-<summary>어떤 시스템에 멀티 스레드 방식이 적합할까요 ?</summary>
+<summary>🚧어떤 시스템에 멀티 스레드 방식이 적합할까요 ?</summary>
 <div markdown="1">
 
 </div>
 </details>
-
+    
 <details>
 <summary>프로세스의 동적 영역과 정적 영역에 대해 설명해보세요</summary>
 <div markdown="1">
+
 - 정적 영역
     - 정적 영역은 프로세스가 실행되는 동안 바뀌지 않는 영역
     - 코드, 전역 데이터, 파일
 - 동적 영역
     - 정적 영역은 프로세스가 실행되는 동안 값이 바뀌거나, 새로 생성 삭제 되는 영역
     - 레지스터 값, 스택, 힙
+
 </div>
 </details>
 
 <details>
 <summary>멀티스레드가 효율성을 향상시킬 수 있는 이유는 무엇인가요 ?</summary>
 <div markdown="1">
+
 각 스레드는 프로세스의 정적 영역의 자원을 공유함으로써 자원의 낭비를 막고 효율성을 향상한다. 
+
 </div>
 </details>
 
 <details>
-<summary>프로세스의 동적영역이 각 스레드마다 할당되는 이유는 무엇인가요 ?</summary>
+<summary>🚧프로세스의 동적영역이 각 스레드마다 할당되는 이유는 무엇인가요 ?</summary>
 <div markdown="1">
 
 </div>
 </details>
-
+    
 <details>
 <summary>동기란 무엇인가요 ?</summary>
 <div markdown="1">
+
 - 메소드를 실행시킴과 `동시에` 반환 값이 기대되는 경우
 - 메소드 실행과 반환 값이 끈임 없이 한 번에 이어지는 경우
 - 실행되었을 때 값이 반환되기 전까지는 `blocking` 되어 있다는 것을 의미한다
+
 </div>
 </details>
 
 <details>
 <summary>비동기란 무엇인가요 ?</summary>
 <div markdown="1">
+
 - 동기가 아닌 방식
 - `blocking`되지 않고 이벤트 큐에 넣거나 백그라운드 스레드에게 해당 task 를 위임하고 바로 다음 코드를 실행하기 때문에 기대되는 값이 바로 반환되지 않는다.
+
 </div>
 </details>
 
 <details>
 <summary>임계구역이란 무엇인가요 ?</summary>
 <div markdown="1">
-동일 자원을 동시에 접근하는 작업을 실행시키는 코드 영역
+
+동일 자원을 동시에 접근하는 작업을 실행시키는 코드 영역입니다 
+
 </div>
 </details>
 
 <details>
 <summary>임계구역 해결을 위한 기본 조건은 무엇이 있나요 ?</summary>
 <div markdown="1">
+
 - 상호배제 : Mutual Exclusion → ****Mutex****
     - 어떤 프로세스가 임계구역에 들어와있다면, 다른 프로세스는 임계구역에 들어갈 수 없습니다.
 - 한정대기 : Bounded Waiting
     - 한 프로세스가 임계구역에 무한정있어, 다른 프로세스가 임계구역에 들어가지 못하면 안됩니다.
 - 진행 : Progress
+
 </div>
 </details>
 
 <details>
 <summary>임계구역의 해결책엔 무엇이 있나요 ?</summary>
 <div markdown="1">
+
 - 뮤텍스 (****Mutex lock :**** Mutual Exclusion)
 - 세마포어
     - 카운팅 세마포어
     - 이진 세마포어
 - 모니터
+
 </div>
 </details>
-
 
 <details>
 <summary> 🚧 멀티 프로세스가 그런 단점이 있다면 왜 사용하는가? 전부 멀티 스레드로 구현하는 것이 시스템에 이로운 것이 아닌가? </summary>
@@ -181,8 +170,6 @@ CPU가 놀지 않도록 만들고, 사용자에게 빠르게 일처리를 제공
 
 </div>
 </details>
-
-<br/>
 
 <details>
 <summary> 🚧 인터럽트가 무엇인가? </summary>
@@ -208,8 +195,6 @@ CPU가 놀지 않도록 만들고, 사용자에게 빠르게 일처리를 제공
 </div>
 </details>
 
-<br/>
-
 <details>
 <summary> 🚧 인터럽트 처리 과정 </summary>
 <div markdown="1">
@@ -220,8 +205,6 @@ CPU가 놀지 않도록 만들고, 사용자에게 빠르게 일처리를 제공
 
 </div>
 </details>
-
-<br/>
 
 <details>
 <summary> 🚧 Linux의 대표적인 system call </summary>
