[2021년 03월 28일] 스터디 진행

--- a/멀티 프로세스와 멀티스레드.md
+++ b/멀티 프로세스와 멀티스레드.md
@@ -4,7 +4,10 @@
 <summary>스레드의 문맥교환이 프로세스의 문맥교환보다 빠른 이유는 무엇인가요 ?</summary>
 <div markdown="1">
 
-스레드의 문맥교환은 캐시를 비우지 않기 때문에 빠르다.
+- 스레드의 문맥교환은 캐시를 비우지 않기 때문에 빠르다.
+  - 여기서 캐시란 CPU 캐시를 의미한다. CPU 캐시의 단위는 프로세스이므로, 스레드 문맥교환에서는 캐싱을 비우는 작업이 일어나지 않는다. 
+  - 스레드에선 문맥교환이 일어나지 않는다 ?
+    - 문맥교환이란 CPU 캐시를 의미하기도 한다. 따라서 "스레드 문맥교환"에 논란의 여지가 있을 수 있다. (이화여대 강의 참고)
 
 </div>
 </details>
@@ -18,20 +21,55 @@
 
   - 자원 공유로 인한 자원 소모량 감소
       - 한 프로세스의 자원을 모든 스레드가 공유하게 되어,
-      - 스레드간의 통신은 프로세스의 것보다 간단하다.
-	@@ -21,14 +25,14 @@
+      - 스레드간의 통신은 프로세스의 통신보다 간단하다.
+  
+  - 스레드의 문맥교환이 프로세스의 문맥교환에 비해 오버헤드가 적다. 
 </details>
 
 <details>
-<summary>🚧스레드간의 통신은 어떻게 이뤄지나요</summary>
+<summary>스레드간의 통신은 어떻게 이뤄지나요</summary>
 <div markdown="1">
 
+  - 전역 변수, 파일, 힙 
+  - 스레드간 통신은 힙공간을 통해 이뤄지며, 힙 공간은 해당 프로세스의 모든 스레드가 접근할 수 있다. 
+  - 스레드간 통신은 OS간 차이가 있다. 
+    - Android 
+      - JVM : 핸들러 (Looper, messageQueue) 
+      - wait(), notify() and notifyAll()
+      - 단반향 데이터 파이프를 통한 데이터 전달
+      - 공유 메모리 통신
+      - 블로킹 큐를 사용하는 소비자-생산자 패턴 구현
+      - 메시지 큐의 동작
+      - UI 스레드로 태스크 재전송 
+      - [reference](https://blog.fearcat.in/a?ID=01550-a37aad63-9977-4c0e-a5df-6538f076bc6a)
+    - iOS 
+      - Direct messaging
+      - Global variables, shared memory, and objects
+      - Conditions
+      - Run loop sources
+      - Ports and sockets
+      - Message queues
+      - Cocoa distributed objec
+      - [reference](https://wlaxhrl.tistory.com/63)
+  
 </div>
 </details>
 
 <details>
-<summary>🚧프로세스간의 통신은 어떻게 이뤄지나요</summary>
-<div markdown="1"></div>
+<summary>프로세스간의 통신은 어떻게 이뤄지나요</summary>
+<div markdown="1">
+
+  - 프로세스 간 데이터 통신
+    - 파일, 파이프
+  - 네트워크를 이용한 데이터 통신
+    - 소켓, RPC (Remote Procedure Call)
+
+
+  - 익명 파이프,  Named PIPE, Message Queue, 공유 메모리, 메모리 맵, 소켓 등을 활용하여 이뤄진다. 
+
+  - [reference](https://github.com/gyoogle/tech-interview-for-developer/blob/master/Computer%20Science/Operating%20System/IPC(Inter%20Process%20Communication).md)
+</div>
+
 </details>
     
 <details>
@@ -55,25 +93,44 @@
 </details>
 
 <details>
-<summary>🚧멀티 프로세스와 멀티 스레드의 장단점을 설명해보세요 </summary>
+<summary>멀티 프로세스와 멀티 스레드의 장단점을 설명해보세요 </summary>
 <div markdown="1">
+
+  - 멀티 스레드 장점 (멀티 프로세스의 단점)
+    - 응답성 향상
+      - 한 스레드가 입출력 작업 중이라도, 다른 스레드가 사용자의 요청에 응답할 수 있다.
+    - 자원 공유로 인한 자원 소모량 감소 (적은 메모리, 적은 CPU 시간 차지)
+      - 한 프로세스의 자원을 모든 스레드가 공유하게 되어,
+      - 스레드간의 통신은 프로세스의 통신보다 간단하다.
+    - 스레드의 문맥교환이 프로세스의 문맥교환에 비해 오버헤드가 적다. (빠르다.)
+  
+  - 멀티 스레드 단점 (멀티 프로세스의 장점)
+    - 자원을 공유하기 때문에, 다른 스레드에 영향을 줄 수 있다. 
+    - 임계구역 코드에 대한 동기화 처리를 하지 않으면, 프로세스가 예상치 못한 방향으로 흘러갈 수 있다. 
 
 </div>
 </details>
 
 <details>
-<summary>🚧어떤 시스템에 멀티 프로세스 방식이 적합할까요 ?</summary>
+<summary>어떤 시스템에 멀티 프로세스 방식 혹은 멀티 스레드 방식이 적합할까요 ?</summary>
 <div markdown="1">
+
+
+- 멀티 프로세스 방식
+  - 높은 안정성, 보안성이 요구되는 시스템 -> 한 프로그램이 다른 프로그램에 영향을 주면 안될때 
+  - 예) 크롬
+    - 멀티 프로세스 방식으로 구현된 크롬은, 멀티탭 중 하나의 탭에 문제 발생시, 하나의 프로세스만 죽고, 다른 탭에 전이되지 않음
+    - 반면, 멀티 스레드 방식으로 구현되 인터넷 익스프로러는, 문제가 전이되어, 하나의 프로세스가 종료되면서 탭 전체가 종료됨 
+- 멀티 스레드 방식
+  - 높은 효율을 요구하는 시스템 
+  - 강하게 연결된 기능들이 포함된 시스템 
+  - 빠른 응답, 반응을 기대하는 시스템
+  - 워드 프로세서 
+    - 한 프로그램 내에서 사용자에게 기능 제공을 할 때
 
 </div>
 </details>
 
-<details>
-<summary>🚧어떤 시스템에 멀티 스레드 방식이 적합할까요 ?</summary>
-<div markdown="1">
-
-</div>
-</details>
     
 <details>
 <summary>프로세스의 동적 영역과 정적 영역에 대해 설명해보세요</summary>
@@ -83,7 +140,7 @@
     - 정적 영역은 프로세스가 실행되는 동안 바뀌지 않는 영역
     - 코드, 전역 데이터, 파일
 - 동적 영역
-    - 정적 영역은 프로세스가 실행되는 동안 값이 바뀌거나, 새로 생성 삭제 되는 영역
+    - 동적 영역은 프로세스가 실행되는 동안 값이 바뀌거나, 새로 생성 삭제 되는 영역
     - 레지스터 값, 스택, 힙
 
 </div>
@@ -93,35 +150,17 @@
 <summary>멀티스레드가 효율성을 향상시킬 수 있는 이유는 무엇인가요 ?</summary>
 <div markdown="1">
 
-각 스레드는 프로세스의 정적 영역의 자원을 공유함으로써 자원의 낭비를 막고 효율성을 향상한다. 
+- 각 스레드는 프로세스의 주소 공간(정적 영역: 코드, 데이터)을 공유함으로써 자원의 낭비를 막고 효율성을 향상한다. (주소 공간 중에서, 코드 + 데이터 영역 ) 
 
 </div>
 </details>
 
 <details>
-<summary>🚧프로세스의 동적영역이 각 스레드마다 할당되는 이유는 무엇인가요 ?</summary>
+<summary>프로세스의 동적영역이 각 스레드마다 할당되는 이유는 무엇인가요 ?</summary>
 <div markdown="1">
 
-</div>
-</details>
-    
-<details>
-<summary>동기란 무엇인가요 ?</summary>
-<div markdown="1">
-
-- 메소드를 실행시킴과 `동시에` 반환 값이 기대되는 경우
-- 메소드 실행과 반환 값이 끈임 없이 한 번에 이어지는 경우
-- 실행되었을 때 값이 반환되기 전까지는 `blocking` 되어 있다는 것을 의미한다
-
-</div>
-</details>
-
-<details>
-<summary>비동기란 무엇인가요 ?</summary>
-<div markdown="1">
-
-- 동기가 아닌 방식
-- `blocking`되지 않고 이벤트 큐에 넣거나 백그라운드 스레드에게 해당 task 를 위임하고 바로 다음 코드를 실행하기 때문에 기대되는 값이 바로 반환되지 않는다.
+- 작업 중에 변할 수 있는 값들, 즉 동적 영역의 값들은 작업 단위마다 독립적이어야한다. 
+- 따라서 하나의 작업 단위로서의 스레드마다, 스택, 힙과 같은 각각의 동적 영역 공간이 할당되어야한다. 
 
 </div>
 </details>
@@ -130,7 +169,7 @@
 <summary>임계구역이란 무엇인가요 ?</summary>
 <div markdown="1">
 
-동일 자원을 동시에 접근하는 작업을 실행시키는 코드 영역입니다 
+- 동일 자원을 동시에 접근하는 작업을 실행시키는 코드 영역입니다 
 
 </div>
 </details>
@@ -142,8 +181,11 @@
 - 상호배제 : Mutual Exclusion → ****Mutex****
     - 어떤 프로세스가 임계구역에 들어와있다면, 다른 프로세스는 임계구역에 들어갈 수 없습니다.
 - 한정대기 : Bounded Waiting
-    - 한 프로세스가 임계구역에 무한정있어, 다른 프로세스가 임계구역에 들어가지 못하면 안됩니다.
+    - 한 프로세스가 임계구역에 무한정 들어와, 다른 프로세스가 임계구역에 들어가지 못하면 안됩니다. 
+    - 어떤 프로세스도 무한 대기하면 안됩니다. 
 - 진행 : Progress
+  - 한 프로세스가 다른 프로세스의 진행을 방해해서는 안됩니다. 
+  - 임계구역에 존재하는 프로세스가 없다면, 임계구역에 들어가려고하는 프로세스가 들어갈 수 있어야한다. 
 
 </div>
 </details>
@@ -155,100 +197,8 @@
 - 뮤텍스 (****Mutex lock :**** Mutual Exclusion)
 - 세마포어
     - 카운팅 세마포어
-    - 이진 세마포어
+    - 이진 세마포어 
 - 모니터
 
 </div>
 </details>
-
-<details>
-<summary> 🚧 멀티 프로세스가 그런 단점이 있다면 왜 사용하는가? 전부 멀티 스레드로 구현하는 것이 시스템에 이로운 것이 아닌가? </summary>
-<div markdown="1">
-
-한 프로세스에서 시스템 콜이 발생했을 때, IO 작업이 진행되는 동안 더이상 CPU를 가지고 다른 작업을 수행할 일이 없는 경우에 다른 프로세스가 CPU를 사용할 수 있도록 하는 것이 효율적이다.
-CPU가 놀지 않도록 만들고, 사용자에게 빠르게 일처리를 제공해주기 위한 것이다.
-
-</div>
-</details>
-
-<details>
-<summary> 🚧 인터럽트가 무엇인가? </summary>
-<div markdown="1">
-
-- 프로그램 실행하는 중 system call, IO 작업과 같은 이벤트 발생
-→ 현재 실행중인 작업 중단
-→ 발생한 이벤트 처리
-→ 실행중이던 작업으로 복귀하는 것
-
-- 넓은 의미의 Interrupt
-    1. Interrupt (하드웨어 인터럽트)
-        - 하드웨어가 발생시킨 인터럽트
-        - ex) 타이머 인터럽트, IO 컨트롤러 인터럽트
-    2. Trap (소프트웨어 인터럽트)
-        - =사용자 프로그램이 발생시킨 인터럽트
-        - 발생하는 경우
-        1. Exception = 프로그램이 오류 일으킨 경우
-        (0으로 나누는 경우, 명령어를 잘못 사용한 경우, 오버플로우)
-        1. System Call = 프로그램이 운영체제에게 서비스 요청to 커널 함수를 호출하는 경우
-        (소프트웨어 실행 중에 다른 프로세스를 실행시키면 시분할 처리를 위해 자원 할당 동작이 수행된다.)
-
-</div>
-</details>
-
-<details>
-<summary> 🚧 인터럽트 처리 과정 </summary>
-<div markdown="1">
-
-1. 인터럽트 발생
-2. 현재 레지스터 셋, program counter 저장 후 cpu 제어권 인터럽트 처리 루틴에 넘어감
-- 저장하는 이유: 인터럽트 처리 후에 진행하던 작업을 재개하기 위해서
-
-</div>
-</details>
-
-<details>
-<summary> 🚧 Linux의 대표적인 system call </summary>
-<div markdown="1">
-
-## Linux의 대표적인 시스템 콜
-
-fork(), exec(), wait(): 프로세스 생성 및 제어와 관련된 시스템 콜
-
-fork(), exe(): 프로세스 생성 관련
-
-wait(): 해당 프로세스가 생성한 자식 프로세스가 끝날 때까지 기다리는 명령어
-
-### **Fork**
-
-> 새로운 Process를 생성할 때 사용
-> 
-
-현재 프로세스를 그대로 복사하여 생성
-
-자식 프로세스와의 실행을 이후에 구분하는 방법: fork() 반환 값
-
-부모 프로세스 fork 반환값: 자식 프로세스의 PID
-
-child 프로세스의 fork 반환 값: 0
-
-실패시 : 음수 
-
-## exec
-
-자식 프로세스를 부모 프로세스와 다른 프로그램으로 만들고 싶을 때 사용
-
-프로세스의 주소공간 중 code 영역에 새로운 프로그램의 코드를 가져와서 덮어씌운다.
-
-씌운 이후, 데이터 영억, 힙 영역, 다른 메모리 영역이 초기화 됨
-
-새로운 코드가 실행된다. = exec() 이후의 코드 부분은 실행되지 않는다.
-
-
-## Wait
-
-자식 프로세스가 모두 종료될때까지 대기하도록 한다.
-
-</div>
-</details>
-
-
