프로세스와 스레드 block 상태 내용 추가

--- a/프로세스와 스레드.md
+++ b/프로세스와 스레드.md
@@ -272,6 +272,8 @@ https://www.techopedia.com/definition/3328/bootstrap#:~:text=A%20bootstrap%20is%
 - 준비 상태
 - 실행 상태
 - **대기 상태(block 상태)**
+    - 프로세스가 특정 이벤트가 발생할 때까지 CPU를 얻어도 당장 명령을 실행할 수 없어서 대기하는 상태
+    - ex) IO 작업 실행한 경우 
 - 완료 상태
 
 </div>
