--- a/프로세스와 스레드.md
+++ b/프로세스와 스레드.md
@@ -401,27 +401,28 @@ swift의 스레드는 TLS 로서 `threadDictionary: NSMutableDictionary` 를 제
 2. 유저 스레드: 사용자 프로그램이 라이브러리를 이용해 생성, 관리하는 스레드 
 
 1. 유저 레벨 스레드 
-(운영체제에서 멀티 스레드 지원하지 않았을 때 사용)
+(운영체제에서 멀티 스레드 지원하지 않았을 때 사용한 방식)
 - 라이브러리를 사용하여 구현, 스케쥴링 한다.
 - 하나의 커널 스레드와 여러개의 유저 스레드가 연결된다.
 - 장점 
   - 스레드 스위칭시 문맥교환이 발생하지 않는다. -> 스레드 스위칭 속도가 빠르다.
 - 단점
-  - 커널 스레드가 block 상태되면, 전체 유저 스레드도 block 상태 된다. 
+  - 커널 스레드(or 프로세스)가 block 상태되면, 전체 유저 스레드도 block 상태 된다. 
   - 프로세스의 타임 슬라이스를 나눠서 사용하기 때문에, 스레드가 여러 cpu를 사용할 수 없다.
   - 보안에 취약하다. 공유 변수를 보호하는 장치를 커널이 아니라 라이브러리에서 구현해야 한다.
 
-2. 커널 레벨 서레드
+1. 커널 레벨 스레드 
+(현재 리눅스, 윈도우에서 사용하는 방식)
 - 커널이 멀티스레드를 지원하는 방식
 - 하나의 커널 스레드와 하나의 유저 스레드가 연결된다.
 - 장점
   - 특정 스레드가 block 상태가 되어도 다른 스레드가 작업을 계속할 수 있다.
-  - 여러 cpu를 사용할 수 있다.
+  - 스레드가 여러 cpu를 사용할 수 있다.
   - 보안에 강하다. 커널 단에서 보호 장치 제공한다.
 - 단점
   - 스레드간 스위칭이 커널 스레드간 스위칭이 된어 문맥 교환이 일어난다. ->  오버헤드 발생한다.
 
-3. 멀티 레벨 스레드
+1. 멀티 레벨 스레드
 - 사용자 레벨 스레드, 커널 레벨 스레드 혼합한 방식
 - 멀티 레벨 스레드에서는 커널 스레드 개수가 유저 레벨 스레드 개수와 같거나 적다.
 - 장점
