[2022년 03월 30일] 다음 스터디 일정 업데이트

--- a/복습/프로세스와 스레드 복습 내용.md
+++ b/복습/프로세스와 스레드 복습 내용.md
@@ -189,7 +189,7 @@ val foo = Foo()
 </details>
 
 <details>
-<summary> TLB 란? </summary>
+<summary> TLS 란? </summary>
 <div markdown="1">
 - 스레드별로 전용 저장공간
 
