[2022년 03월 30일] 프로세스와 스레드 복습 질문 추가

--- a/복습/프로세스와 스레드 복습 내용.md
+++ b/복습/프로세스와 스레드 복습 내용.md
@@ -1,4 +1,44 @@
 <details>
+<summary>프로세스 주소 공간 구성</summary>
+<div markdown="1">
+
+Code : 코드 자체를 구성하는 메모리 영역(프로그램 명령)
+
+Data : 전역변수, 정적변수, 배열 등
+
+초기화 된 데이터는 data 영역에 저장  
+초기화 되지 않은 데이터는 bss 영역에 저장  
+Heap : 동적 할당 시 사용 (new(), malloc() 등)
+Stack : 지역변수, 매개변수, 리턴 값 (임시 메모리 영역)
+
+</div>
+</details>
+
+<br/>
+
+<details>
+<summary>주소 공간을 이렇게 나누는 이유?</summary>
+<div markdown="1"> 
+
+공통된 부분은 최대한 공유하여 컴퓨터 시스템 리소스(메모리) 절약하기 위해
+동일한 프로그램이라면 코드와 데이터는 메모리에 한번만 할당되어 존재해도 충분하다, 이것을 공유하여 사용함으로써 시스템 리소스를 절약하기 위함이다.
+
+</div>
+</details>
+
+<br/>
+
+<details>
+<summary>스택을 스레드마다 독립적으로 할당하는 이유</summary>
+<div markdown="1">
+
+스택은 함수 호출 시 전달되는 인자, 되돌아갈 주소값 및 함수 내에서 선언하는 변수 등을 저장하기 위해 사용되는 메모리 공간이므로 스택 메모리 공간이 독립적이라는 것은 독립적인 함수 호출이 가능하다는 것이고 이는 독립적인 실행 흐름이 추가되는 것이다. 따라서 스레드의 정의에 따라 독립적인 실행 흐름을 추가하기 위한 최소 조건으로 독립된 스택을 할당한다.
+
+</div>
+</details>
+
+
+<details>
 <summary>프로세스의 상태 5가지</summary>
 <div markdown="1">
 
@@ -96,9 +136,7 @@ https://www.techopedia.com/definition/3328/bootstrap#:~:text=A%20bootstrap%20is%
 <details>
 <summary>프로세스의 힙에는 어떤 내용이 저장되는가 ?</summary>
 <div markdown="1">
-</div>
-</details>
-
+  
 - JVM, swift 모두 클래스의 인스턴스를 선언하면, 변수는 데이터 영역 혹은 스택 영역에 할당되고, 인스턴스는 힙 영역에 할당된다.
 ```
 val foo = Foo()
@@ -116,6 +154,9 @@ val foo = Foo()
   - JVM에서는 가비지 컬렉터가 이 역할을 수행   
   가비지 컬렉팅이 수행되는 방식: https://swiftymind.tistory.com/112
   - Swift에서는 Auto Reference Counting을 통해 해제 된다.
+</div>
+</details>
+
 
 <br/>
 
