--- a/동기, 비동기.md
+++ b/동기, 비동기.md
@@ -33,3 +33,28 @@
 - [reference]
 </div>
 </details>
+
+<details>
+<summary>🚧동시성이란 무엇인가요 ?</summary>
+<div markdown="1">
+
+- [reference]
+</div>
+</details>
+
+
+<details>
+<summary>🚧병렬성이란 무엇인가요 ?</summary>
+<div markdown="1">
+
+- [reference]
+</div>
+</details>
+
+<details>
+<summary>🚧thread-safe이란 무슨 의미인가요 ?</summary>
+<div markdown="1">
+
+- [reference]
+</div>
+</details>
