[2022년 04월 10일] 스터디 진행

--- a/동기, 비동기.md
+++ b/동기, 비동기.md
@@ -1,60 +1,142 @@
 <details>
-<summary>🚧동기란 무엇인가요 ?</summary>
+<summary>동기란 무엇인가요 ?</summary>
 <div markdown="1">
 
-- 메소드를 실행시킴과 `동시에` 반환 값이 기대되는 경우
 - 메소드 실행과 반환 값이 끈임 없이 한 번에 이어지는 경우
-- <strike> 실행되었을 때 값이 반환되기 전까지는 `blocking` 되어 있다는 것을 의미한다</strike>
+- 다른 스레드의 작업 완료를 자신이 계속 신경쓰는 경우 
+  - ex) 수시로 확인하는 코드
+
+      ```java
+      Future ft = asyncFileChannel.read(~~~);
+
+      while(!ft.isDone()) {
+          // isDone()은 asyncChannle.read() 작업이 완료되지 않았다면 false를 바로 리턴해준다.
+          // isDone()은 물어보면 대답을 해줄 뿐 작업 완료를 스스로 신경쓰지 않고,
+          // isDone()을 호출하는 쪽에서 계속 isDone()을 호출하면서 작업 완료를 신경쓴다.
+          // asyncChannle.read()이 완료되지 않아도 여기에서 다른 작업 수행 가능 
+      }
+
+      // 작업이 완료되면 작업 결과에 따른 다른 작업 처리
+      ```
 
 </div>
 </details>
 
 <details>
-<summary>🚧비동기란 무엇인가요 ?</summary>
+<summary>비동기란 무엇인가요 ?</summary>
 <div markdown="1">
 
-- 동기가 아닌 방식
-- <strike> `blocking`되지 않고 이벤트 큐에 넣거나 백그라운드 스레드에게 해당 task 를 위임하고 바로 다음 코드를 실행하기 때문에 기대되는 값이 바로 반환되지 않는다.</strike>
+- 다른 스레드의 작업 완료를 자신이 계속 신경쓰지 않는 경우
+  - ex) callback 
+      ```kotlin
+      callback.enque(resultCallback()) // enque가 실행이 되고 별도의 스레드 생성된다. 
+      // enque를 호출한 함수에게 제어권이 돌아온다. 그래서 바로 print가 실행됨 
+      print("hello jina") // 즉, enque 함수 처리가 완료되지 않아도, 제어권을 받아서 바로 실행된다.
+      ```
 
 </div>
 </details>
 
 <details>
-<summary>🚧blocking은 무엇인가요 ?</summary>
+<summary>blocking은 무엇인가요 ?</summary>
 <div markdown="1">
+
+- 메소드를 실행시킴과 `동시에` CPU 제어권이 리턴되지 않는 경우
 
 </div>
 </details>
 
 <details>
-<summary>🚧non blocking은 무엇인가요 ?</summary>
+<summary>non blocking은 무엇인가요 ?</summary>
 <div markdown="1">
 
-- [reference]
+- 메소드를 실행시킴과 `동시에` CPU 제어권이 리턴되는 경우
+    ```kotlin
+    callback.enque(resultCallback()) // enque가 실행이 되고 별도의 스레드 생성된다. 
+    // enque를 호출한 함수에게 제어권이 돌아온다. 그래서 바로 print가 실행됨 
+    print("hello jina") // 즉, enque 함수 처리가 완료되지 않아도, 제어권을 받아서 바로 실행된다.
+    ```
+- [reference](http://homoefficio.github.io/2017/02/19/Blocking-NonBlocking-Synchronous-Asynchronous/)
+  
+</div> 
+</details>
+
+
+<details>
+<summary>2개 이상의 스레드가 있어야 non blocking 할 수 있나요 ? </summary>
+<div markdown="1">
+
+- 놉 반례로 코루틴이 있다. 코루틴은 하나의 스레드에서 non blocking 할 수 있다. 
+
+</div>
+</details>
+
+
+<details>
+<summary>동시성이란 무엇인가요 ?</summary>
+<div markdown="1">
+
+- 다수의 테스크가 동시에 실행되어 보이게끔, CPU 제어권을 가지는 시간을 쪼개 각 테스크를 실행하는 것 (시분할 처리 방식)
+- Interleaving, 시분할: 다수의 Task 가 있는데, 각 Task 들을 평등하게 조금씩 나누어 실행하는것
+- [reference](https://aaronryu.github.io/2019/05/27/coroutine-and-thread/)
 </div>
 </details>
 
 <details>
-<summary>🚧동시성이란 무엇인가요 ?</summary>
+<summary>그럼 싱글 스레드에서만 동시성이 보장될 수 있나요 ?</summary>
 <div markdown="1">
 
-- [reference]
+-  **시분할 처리 시스템이 가능한 환경**이라면, 동시성은 다양한 환경에서 발생할 수 있다. 
+-  시분할 처리 시스템이 가능한 환경으로는 **멀티 코어 or 싱글 코어의 멀티 스레드 환경**이 있다. 
+    - 동시성이 실제로 사용되는 예제 
+        Multiprogramming, or running a lot of programs concurrently (the O.S. has to multiplex their execution on available processors). For example:
+        downloading a file
+        listening to streaming audio
+        having a clock running
+        chatting
+        analyzing data from some weird experiment
+        streaming a movie
+        printing something
+        running a simulation
+        typing in a text editor
+        running a web server, sendmail, and other daemons
+   - [reference](https://cs.lmu.edu/~ray/notes/introconcurrency/#:~:text=Hardware%20examples%3A,computer%20can%20have%20multiple%20processors)
 </div>
 </details>
 
-
 <details>
-<summary>🚧병렬성이란 무엇인가요 ?</summary>
+<summary>병렬성이란 무엇인가요 ?</summary>
 <div markdown="1">
 
-- [reference]
+- Parallelizing, 병렬수행: 다수의 Task 가 있는데, 각 Task 들이 한번에 수행되는 것
+- 병렬성이 보장될 수 있는 환경은 **멀티 코어**이다. 
+- [reference](https://aaronryu.github.io/2019/05/27/coroutine-and-thread/)
 </div>
 </details>
 
 <details>
-<summary>🚧thread-safe이란 무슨 의미인가요 ?</summary>
+<summary>싱글 코어인데 멀티 스레드 경우에선 병렬성이 보장될 수 없나요 ? </summary>
 <div markdown="1">
 
-- [reference]
+- 싱클 코어의 멀티 스레드 환경에선, CPU 제어권을 시간별로 쪼개서 사용해야하기 때문에 병렬 수행 불가하다. 
+</div>
+</details>
+
+<details>
+<summary>thread-safe이란 무슨 의미인가요 ?</summary>
+<div markdown="1">
+
+- 멀티 스레드 프로그래밍에서 함수, 변수, 혹은 객체가 여러 스레드로부터 동시에 접근되어도 프로그램의 실행에 문제가 없음을 뜻한다.
+- 여러 스레드가 임계구역에 동시에 접근해도 **항상 개발자가 의도한대로 코드가 동작**됨을 뜻한다. 
+- [reference](https://m.blog.naver.com/PostView.naver?isHttpsRedirect=true&blogId=complusblog&logNo=220985528418)
+</div>
+</details>
+
+<details>
+<summary>thread-safe하게 만들어주기 위해서는 어떻게 해야하는가 ?</summary>
+<div markdown="1">
+
+- 스레드 동기화를 잘 해야합니다. 
+- to be Continue...
 </div>
 </details>
