[2022년 04월 13일] 스터디 진행

--- a/스레드 동기화.md
+++ b/스레드 동기화.md
@@ -1,5 +1,97 @@
 <details>
-<summary>🚧뮤텍스와 이진 세마포어가 어떻게 다른가요 ?</summary>
+<summary>프로세스 간 통신은 왜 필요한가요 ?</summary>
+<div markdown="1">
+
+</div>
+</details>
+
+<details>
+<summary>프로세스 간 통신의 방식엔 어떤 것들이 있나요 ?</summary>
+<div markdown="1">
+
+</div>
+</details>
+
+<details>
+<summary>임계구역이란 무엇인가요 ?</summary>
+<div markdown="1">
+
+</div>
+</details>
+
+
+<details>
+<summary>생산자-소비자 문제에 대해서 설명해보세요 </summary>
+<div markdown="1">
+
+</div>
+</details>
+
+<details>
+<summary>임계구역 해결 조건에 대해서 설명해보세요</summary>
+<div markdown="1">
+
+</div>
+</details>
+
+<details>
+<summary>임계구역 해결 방법엔 어떤 것들이 있나요 ? </summary>
+<div markdown="1">
+
+</div>
+</details>
+<details>
+<summary>피터슨 알고리즘에 대해서 설명해보세요 </summary>
+<div markdown="1">
+
+</div>
+</details>
+
+<details>
+<summary>데커 알고리즘에 대해서 설명해보세요 </summary>
+<div markdown="1">
+
+</div>
+</details>
+
+<details>
+<summary>뮤텍스에 대해서 설명해보세요 </summary>
+<div markdown="1">
+
+</div>
+</details>
+
+<details>
+<summary>세마포어에 대해서 설명해보세요 </summary>
+<div markdown="1">
+
+</div>
+</details>
+
+<details>
+<summary>모니터에 대해서 설명해보세요 </summary>
+<div markdown="1">
+
+</div>
+</details>
+ㅍ<details>
+<summary>데드락이란 무엇인가요 ?</summary>
+<div markdown="1">
+
+</div>
+</details>
+
+</div>
+</details>
+ㅍ<details>
+<summary>데드락이란 무엇인가요 ?</summary>
+<div markdown="1">
+
+</div>
+</details>
+
+<details>
+<summary>경쟁상태란 무엇인가요 ?</summary>
 <div markdown="1">
 
 </div>
