[2022년 04월 13일] 스터디 진행

--- a/스레드 동기화.md
+++ b/스레드 동기화.md
@@ -74,16 +74,7 @@
 
 </div>
 </details>
-ㅍ<details>
-<summary>데드락이란 무엇인가요 ?</summary>
-<div markdown="1">
-
-</div>
-</details>
-
-</div>
-</details>
-ㅍ<details>
+<details>
 <summary>데드락이란 무엇인가요 ?</summary>
 <div markdown="1">
 
