--- a/스레드 동기화.md
+++ b/스레드 동기화.md
@@ -1,15 +1,150 @@
+
+---
+
 <details>
-<summary>🚧뮤텍스와 이진 세마포어가 어떻게 다른가요 ?</summary>
+<summary> 세마포어 란? </summary>
+<div markdown="1">
+
+- 임계 구역 문제를 해결하기 위한 방법 중 하나
+- 언제 사용? 여러 개의 공유 자원을 획득하고, 반납하는 연산을 할 때
+- 구성요소: 세마포어, P연산, V연산
+  - 세마포어: 사용 가능한 자원의 개수를 나타낸다.
+  - P연산: 사용 가능한 자원이 있으면(세마포어 값이 0보다 크면) 자원을 1개 감소시키고, 임계구역으로 진입한다.   
+  만일 사용 가능한 자원이 없다면, 대기한다.
+  - V연산: 자원을 반납한다.(세마포어 값을 1 증가시킨다.) 만일 임계 구역을 진입하기 위해 대기 중인 프로세스를 깨운다.
+- 세마포어를 사용하기 위해서는 시스템에서 test-and-set이 분리되지 않고 한번에 실행되어야 한다.
+- 단점: 프로그래머가 실수하여 임계 구역이 보호되지 않을 수 있다.
+
+</div>
+</details>
+
+<br/>
+
+<details>
+<summary> 뮤텍스 란? </summary>
+<div markdown="1">
+- 이진 세마포어이다.
+- 언제 사용? 임계 구역에 락을 걸고, 풀어서 여러 프로세스/스레드를 상호배제할 때 사용한다.
+</div>
+</details>
+
+<br/>
+
+<details>
+<summary> 뮤텍스와 세마포어의 차이점? 언제 사용? </summary>
+<div markdown="1">
+- 세마포어: 임개구역에 세마포어 값으로 지정된 개수만큼 프로세스/스레드가 진입할 수 있다.
+- 뮤텍스: 임계 구역에 오직 하나의 프로세스/스레드만 진입할 수 있다.
+
+<br/>
+
+- 세마포어: 세마포어는 뮤텍스와 달리 해제(Unlock)의 주체가 획득(Lock)과 같지 않아도 된다. 어떤 프로세스가 세마포어의 값을 감소시켜도 다른 프로세스가 풀어줄 수 있다.
+
+- 출처:  https://velog.io/@codemcd/운영체제OS-9.-프로세스-동기화-2
+- 출처: https://velog.io/@logandev/%EC%84%B8%EB%A7%88%ED%8F%AC%EC%96%B4%EC%99%80-%EB%AE%A4%ED%85%8D%EC%8A%A4-%EC%B0%A8%EC%9D%B4
+
+
+</div>
+</details>
+
+<br/>
+
+<details>
+<summary> 모니터 란? </summary>
+<div markdown="1">
+
+- 보호할 자원을 임계구역으로 숨기고 임계 구역에서 작업할 수 있는 인터페이스만 제공하여 자원을 보호한다.
+- 순서
+  - 공용 자원에 접근하려는 프로세스는 직접 P연산/V연산을 사용하지 않고, 모니터에 작업을 요청한다.
+  - 모니터는 요청받은 작업을 모니터 큐에 저장한 후, 순서대로 처리하고 그 결과를 프로세스에 알려준다. 
+- 모니터에는 한번에 하나의 프로세스/스레드만 접근할 수 있다.
+
+</div>
+</details>
+
+<br/>
+
+<details>
+<summary> 🚧뮤텍스 <-> 모니터 차이점 </summary>
+<div markdown="1">
+
+
+</div>
+</details>
+
+<br/>
+
+<details>
+<summary> 바쁜 대기(busy waiting) 방식이 무엇인가? </summary>
+<div markdown="1">
+
+- 임계 구역에 진입하기 위해 프로세스/스레드가 대기할 때 while 문을 돌면서 대기하는 것
+
+</div>
+</details>
+
+<br/>
+
+
+
+<details>
+<summary> 🚧 바쁜 대기(busy waiting) 과 block-and-wakeup 방식의 차이점이 무엇인가? </summary>
+<div markdown="1">
+
+
+
+</div>
+</details>
+
+<br/>
+
+
+<details>
+<summary> 🚧 바쁜 (busy waiting) 과 block-and-wakeup 방식은 언제 사용하는가?  
+ </summary>
 <div markdown="1">
 
 </div>
 </details>
 
+<br/>
+
+<details>
+<summary> 🚧 세마포어를 잘못 사용할 때 발생할 수 있는 문제점
+ </summary>
+<div markdown="1">
+
+</div>
+</details>
+
+<br/>
+
+
+<details>
+<summary>🚧데커 알고리즘 ?</summary>
+<div markdown="1">
+
+</div>
+</details>
+
+<br/>
+
+<details>
+<summary> 🚧피터슨 알고리즘 ? </summary>
+<div markdown="1">
+
+</div>
+</details>
+
+<br/>
+
+
 <details>
 <summary>🚧뮤텍스, 세마포어, 모니터가 언어에서 어떻게 사용되나요 ?</summary>
 <div markdown="1">
 
-- ex) 코틀린에서 뮤텍스를 어떻게 구현되어있는지, 사용할 수 있는지 ?
+- Kotlin
+- Swift
 
 </div>
 </details>
