--- a/스레드 동기화.md
+++ b/스레드 동기화.md
@@ -1,5 +1,3 @@
-
-
 <details>
 <summary> 세마포어 란? </summary>
 <div markdown="1">
@@ -64,134 +62,6 @@
 <br/>
 
 <details>
-<summary> 🚧뮤텍스 <-> 모니터 차이점 </summary>
-</details>
-
-<br/>
-
-<summary>프로세스 간 통신은 왜 필요한가요 ?</summary>
-<div markdown="1">
-
-</div>
-</details>
-
-<details>
-<summary>프로세스 간 통신의 방식엔 어떤 것들이 있나요 ?</summary>
-<div markdown="1">
-
-</div>
-</details>
-
-
-<details>
-<summary>생산자-소비자 문제에 대해서 설명해보세요 </summary>
-<div markdown="1">
-
-</div>
-</details>
-
-<details>
-<summary>임계구역 해결 방법엔 어떤 것들이 있나요 ? </summary>
-<div markdown="1">
-
-</div>
-</details>
-<details>
-<summary>피터슨 알고리즘에 대해서 설명해보세요 </summary>
-<div markdown="1">
-
-</div>
-</details>
-
-<details>
-<summary>데커 알고리즘에 대해서 설명해보세요 </summary>
-<div markdown="1">
-
-</div>
-</details>
-
-<details>
-<summary>데드락이란 무엇인가요 ?</summary>
-<div markdown="1">
-
-</div>
-</details>
-
-<details>
-<summary>데드락을 해결하는 방법은 무엇이 있나요?</summary>
-<div markdown="1">
-
-</div>
-</details>
-
-<br/>
-
-<details>
-<summary>경쟁상태란 무엇인가요 ?</summary>
-
-
-</div>
-</details>
-
-<br/>
-
-<details>
-<summary> 바쁜 대기(busy waiting) 방식이 무엇인가? </summary>
-<div markdown="1">
-
-- 임계 구역에 진입하기 위해 프로세스/스레드가 대기할 때 while 문을 돌면서 대기하는 것
-
-</div>
-</details>
-
-<br/>
-
-
-
-<details>
-<summary> 🚧 바쁜 대기(busy waiting) 과 block-and-wakeup 방식의 차이점이 무엇인가? </summary>
-<div markdown="1">
-
-
-
-</div>
-</details>
-
-<br/>
-
-
-<details>
-<summary> 🚧 바쁜 (busy waiting) 과 block-and-wakeup 방식은 언제 사용하는가?  
- </summary>
-<div markdown="1">
-
-</div>
-</details>
-
-<br/>
-
-<details>
-<summary> 🚧 세마포어를 잘못 사용할 때 발생할 수 있는 문제점
- </summary>
-<div markdown="1">
-
-</div>
-</details>
-
-<br/>
-
-
-<details>
-<summary>🚧뮤텍스, 세마포어, 모니터가 언어에서 어떻게 사용되나요 ?</summary>
-<div markdown="1">
-
-- Kotlin
-- Swift
-
-</div>
-</details>
-
-<details>
 <summary>멀티 프로세스가 그런 단점이 있다면 왜 사용하는가? 전부 멀티 스레드로 구현하는 것이 시스템에 이로운 것이 아닌가? </summary>
 <div markdown="1">
 
@@ -202,6 +72,8 @@ CPU가 놀지 않도록 만들고, 사용자에게 빠르게 일처리를 제공
 
 </div>
 </details>
+
+<br/>
 
 <details>
 <summary>인터럽트가 무엇인가? </summary>
@@ -282,3 +154,139 @@ child 프로세스의 fork 반환 값: 0
 
 </div>
 </details>
+
+<br/>
+
+<details>
+<summary> 바쁜 대기(busy waiting) 방식이 무엇인가? </summary>
+<div markdown="1">
+
+- 임계 구역에 진입하기 위해 프로세스/스레드가 대기할 때 while 문을 돌면서 대기하는 것
+
+</div>
+</details>
+
+<br/>
+
+---
+
+<details>
+<summary> 🚧뮤텍스 <-> 모니터 차이점 </summary>
+</details>
+
+<br/>
+
+<details>
+<summary>프로세스 간 통신은 왜 필요한가요 ?</summary>
+<div markdown="1">
+
+</dib>
+
+</div>
+</details>
+
+<details>
+<summary>프로세스 간 통신의 방식엔 어떤 것들이 있나요 ?</summary>
+<div markdown="1">
+
+</div>
+</details>
+
+
+<details>
+<summary>생산자-소비자 문제에 대해서 설명해보세요 </summary>
+<div markdown="1">
+
+</div>
+</details>
+
+<details>
+<summary>임계구역 해결 방법엔 어떤 것들이 있나요 ? </summary>
+<div markdown="1">
+
+</div>
+</details>
+<details>
+<summary>피터슨 알고리즘에 대해서 설명해보세요 </summary>
+<div markdown="1">
+
+</div>
+</details>
+
+<details>
+<summary>데커 알고리즘에 대해서 설명해보세요 </summary>
+<div markdown="1">
+
+</div>
+</details>
+
+<details>
+<summary>데드락이란 무엇인가요 ?</summary>
+<div markdown="1">
+
+</div>
+</details>
+
+<details>
+<summary>데드락을 해결하는 방법은 무엇이 있나요?</summary>
+<div markdown="1">
+
+</div>
+</details>
+
+<br/>
+
+<details>
+<summary>경쟁상태란 무엇인가요 ?</summary>
+
+
+</div>
+</details>
+
+<br/>
+
+
+<details>
+<summary> 🚧 바쁜 대기(busy waiting) 과 block-and-wakeup 방식의 차이점이 무엇인가? </summary>
+<div markdown="1">
+
+
+<br/>
+
+</div>
+</details>
+
+<br/>
+
+
+<details>
+<summary> 🚧 바쁜 (busy waiting) 과 block-and-wakeup 방식은 언제 사용하는가?  
+ </summary>
+<div markdown="1">
+
+</div>
+</details>
+
+<br/>
+
+<details>
+<summary> 🚧 세마포어를 잘못 사용할 때 발생할 수 있는 문제점
+ </summary>
+<div markdown="1">
+
+</div>
+</details>
+
+<br/>
+
+
+<details>
+<summary>🚧뮤텍스, 세마포어, 모니터가 언어에서 어떻게 사용되나요 ?</summary>
+<div markdown="1">
+
+- Kotlin
+- Swift
+
+</div>
+</details>
+
