[2022년 04월 13월] 프로세스 동기화 스터디 내용 정리

--- a/스레드 동기화/스레드 동기화.md
+++ b/스레드 동기화/스레드 동기화.md
@@ -7,8 +7,19 @@
 - 구성요소: 세마포어, P연산, V연산
   - 세마포어: 사용 가능한 자원의 개수를 나타낸다.
   - P연산: 사용 가능한 자원이 있으면(세마포어 값이 0보다 크면) 자원을 1개 감소시키고, 임계구역으로 진입한다.   
-  만일 사용 가능한 자원이 없다면, 대기한다.
-  - V연산: 자원을 반납한다.(세마포어 값을 1 증가시킨다.) 만일 임계 구역을 진입하기 위해 대기 중인 프로세스를 깨운다.
+  만일 사용 가능한 자원이 없다면, 세마포어 큐에서 대기한다.
+  - V연산: 자원을 반납한다.(세마포어 값을 1 증가시킨다.) 만일 임계 구역을 진입하기 위해 대기 중인 프로세스를 깨운다. 
+  
+    - 세마포어가 block-and-wakeup 방식으로 구현된 경우: 임계구역을 사용중인 프로세스가 작업을 마치면 다음 프로세스에게, 임계구역을 사용하라는 동기화 신호를 보낸다. 
+
+  ```
+  Semaphore(n); // n은 공유 가능한 자원의 수
+  P() // 잠금 : 임계구역이 사용중임을 표시 : 감소 연산 
+
+  // critical section
+
+  V() // 잠금 해제 : 임계구역이 비었음을 표시 : 증가 연산
+  ```
 - 세마포어를 사용하기 위해서는 시스템에서 test-and-set이 분리되지 않고 한번에 실행되어야 한다.
 - 단점: 프로그래머가 실수하여 임계 구역이 보호되지 않을 수 있다.
 
@@ -20,7 +31,7 @@
 <details>
 <summary> 뮤텍스 란? </summary>
 <div markdown="1">
-- 이진 세마포어이다.
+
 - 언제 사용? 임계 구역에 락을 걸고, 풀어서 여러 프로세스/스레드를 상호배제할 때 사용한다.
 </div>
 </details>
@@ -28,15 +39,54 @@
 <br/>
 
 <details>
-<summary> 뮤텍스와 세마포어의 차이점? 언제 사용? </summary>
+<summary> 뮤텍스와 세마포어의 차이점? </summary>
 <div markdown="1">
-- 세마포어: 임개구역에 세마포어 값으로 지정된 개수만큼 프로세스/스레드가 진입할 수 있다.
+
+- 세마포어 <-> 뮤텍스 비교표
+![세마포어 vs 뮤텍스](./%08%EC%84%B8%EB%A7%88%ED%8F%AC%EC%96%B4vs%EB%AE%A4%ED%85%8D%EC%8A%A4.jpg)
+
+
+
+
+1. 세마포어는 신호(sinal) 체계를 갖는다.  
+뮤텍스는 잠금(locking) 체계를 갖는다.
+   - 세마포어 값은 wait(), signal()을 통해 수정된다.
+   - 뮤텍스 객체는 locked, unlocked 상태가 존재한다.
+
+  <br/>
+
+1. 세마포어는 integer 변수이다.   
+뮤텍스는 객체이다.
+
+
+- 세마포어: 임개구역에 세마포어 최대 값으로 지정된 개수만큼 프로세스/스레드가 진입할 수 있다.
 - 뮤텍스: 임계 구역에 오직 하나의 프로세스/스레드만 진입할 수 있다.
 
 <br/>
 
 - 세마포어: 세마포어는 뮤텍스와 달리 해제(Unlock)의 주체가 획득(Lock)과 같지 않아도 된다. 어떤 프로세스가 세마포어의 값을 감소시켜도 다른 프로세스가 풀어줄 수 있다.
 
+
+<br/>
+
+- 세마포어: 값이 운영체제, 커널에 저장된다.
+  - 세마포어는 integer 변수이다. 숫자 놀이(증감 연산)를 통해 동기화한다.
+  - 세마포어는 뮤텍스가 될 수 있다. (이진 세마포어)
+  
+- 뮤텍스: 
+  - 프로세스가 값을 관리한다.
+  - lock, unlock 상태를 갖는다. 
+  - key를 이용하여 동기화 한다.
+  - 뮤텍스는 세마포어가 될 수 없다.
+    - 이유: 신호체계가 존재하지 않기 때문이다.
+
+
+<br/>
+
+- 세마포어 뮤텍스 차이점 표: https://www.guru99.com/mutex-vs-semaphore.html#4
+
+- 상세 내용 출처: https://afteracademy.com/blog/difference-between-mutex-and-semaphore-in-operating-system
+  
 - 출처:  https://velog.io/@codemcd/운영체제OS-9.-프로세스-동기화-2
 - 출처: https://velog.io/@logandev/%EC%84%B8%EB%A7%88%ED%8F%AC%EC%96%B4%EC%99%80-%EB%AE%A4%ED%85%8D%EC%8A%A4-%EC%B0%A8%EC%9D%B4
 
@@ -50,13 +100,32 @@
 <summary> 모니터 란? </summary>
 <div markdown="1">
 
-- 보호할 자원을 임계구역으로 숨기고 임계 구역에서 작업할 수 있는 인터페이스만 제공하여 자원을 보호한다.
+- 모니터란 일종의 세마포어에 대한 캡슐화, 인터페이스, 시스템 콜 과 비슷한 개념이다.
+  - 보호할 자원을 임계구역으로 숨기고 임계 구역에서 작업할 수 있는 인터페이스만 제공하여 자원을 보호한다.
+- P()와 V() 연산을 잘못 사용할 수 있다는 세마포어의 단점을 보완한 방법이다.
+- P()와 V() 연산을 프로세스가 직접하지 않게 하기 위해, 프로세스가 모니터에게 작업 요청 및 응답을 받아 임계구역 작업을 처리한다.
+
 - 순서
   - 공용 자원에 접근하려는 프로세스는 직접 P연산/V연산을 사용하지 않고, 모니터에 작업을 요청한다.
-  - 모니터는 요청받은 작업을 모니터 큐에 저장한 후, 순서대로 처리하고 그 결과를 프로세스에 알려준다. 
+  - 모니터는 요청받은 작업을 모니터 큐에 저장한 후, 순서대로 처리하고 그 결과를 프로세스에 알려준다.
+
 - 모니터에는 한번에 하나의 프로세스/스레드만 접근할 수 있다.
 
 </div>
+</details>
+
+<br/>
+
+<details>
+<summary> 🚧 세마포어 <-> 모니터 차이점 
+
+1. 세마포어의 wake-up(signal()) signal은 저장되지만, 모니터는 저장 되지 않는다.
+
+2. 세마포어는 wait(), singal()의 호출 순서에 관계 없이 동일하게 동작한다. 모니터는 호출 순서에 따라 동작이 다르다.
+
+출처: https://lass.cs.umass.edu/~shenoy/courses/fall16/lectures/Lec09.pdf
+
+</summary>
 </details>
 
 <br/>
@@ -171,7 +240,14 @@ child 프로세스의 fork 반환 값: 0
 ---
 
 <details>
-<summary> 🚧뮤텍스 <-> 모니터 차이점 </summary>
+<summary> 🚧 모니터 큐 란?</summary>
+</details>
+
+
+<br/>
+
+<details>
+<summary> 🚧 세마포어 큐 란?</summary>
 </details>
 
 <br/>
