프로세스 동기화 파일 마크다운 오류 수정

--- a/스레드 동기화/스레드 동기화.md
+++ b/스레드 동기화/스레드 동기화.md
@@ -117,7 +117,8 @@
 <br/>
 
 <details>
-<summary> 🚧 세마포어 <-> 모니터 차이점 
+<summary> 🚧 세마포어 <-> 모니터 차이점  </summary>
+<div markdown="1">
 
 1. 세마포어의 wake-up(signal()) signal은 저장되지만, 모니터는 저장 되지 않는다.
 
@@ -125,7 +126,8 @@
 
 출처: https://lass.cs.umass.edu/~shenoy/courses/fall16/lectures/Lec09.pdf
 
-</summary>
+</div>
+
 </details>
 
 <br/>
